Add tests models

--- a/views/invoice.ejs
+++ b/views/invoice.ejs
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>PDF FILE</h1>
-    <%= locals.name || "Jhon" %>
+    <%= locals.invoiceNumber || "Jhon" %>
 </body>
 </html>
