--- a/public/style.css
+++ b/public/style.css
@@ -3,3 +3,9 @@
     flex-direction: column;
     align-items: center;
 }
+
+.info {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
