Change span into input

--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,11 @@
     align-items: center;
 }
 
+.summary {
+    display: flex;
+    flex-direction: column;
+}
+
 tbody > td:first-of-type {
     text-align: left;
 }
