--- a/views/invoice.ejs
+++ b/views/invoice.ejs
@@ -121,9 +121,9 @@
             </tfoot>
         </table>
         <div class="summary">
-            <div>Wartosc netto <%= locals.summary.totalNetPrice || '' %> </div>
-            <div>Wartosc VAT <%= locals.summary.vatAmount || '' %> </div>
-            <div>Wartosc brutto <%= locals.summary.totalGrossPrice || '' %> </div>
+            <div>Wartość netto <%= locals.summary.totalNetPrice || '' %> </div>
+            <div>Wartość VAT <%= locals.summary.vatAmount || '' %> </div>
+            <div>Wartość brutto <%= locals.summary.totalGrossPrice || '' %> </div>
         </div>
         <hr>
         <div class="notes">
@@ -131,7 +131,7 @@
         </div>
         <hr>
         <div class="total-due">
-            <div>Do zaplaty: <%= locals.totalDue || '' %> </div>
+            <div>Do zapłaty: <%= locals.totalDue || '' %> </div>
         </div>
         <hr>
     </div>
