--- a/public/style.css
+++ b/public/style.css
@@ -1,32 +1,53 @@
 body {
-    font-family: monospace;
+  font-family: monospace;
+}
+
+.f-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.f-col {
+  display: flex;
+  flex-direction: column;
 }
 
 .containers {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.info {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+.invoice-header {
+  align-items: flex-start;
+  gap: 5px;
+  width: 30%;
 }
 
-.summary {
-    display: flex;
-    flex-direction: column;
+.invoice-header > div {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.invoice-header label {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.invoice-header input {
+  width: 120px;
 }
 
 tbody > td:first-of-type {
-    text-align: left;
+  text-align: left;
 }
 
 tfoot th {
-    text-align: right;
+  text-align: right;
 }
 
 tfoot td {
-    font-weight: boldl;
+  font-weight: bold;
 }
