--- a/public/style.css
+++ b/public/style.css
@@ -14,10 +14,6 @@ tfoot td {
   font-weight: bold;
 }
 
-#invoice-table {
-  padding-top: 1rem;
-}
-
 .f-row {
   display: flex;
   flex-direction: row;
@@ -26,6 +22,10 @@ tfoot td {
 .f-col {
   display: flex;
   flex-direction: column;
+}
+
+.tp {
+  padding-top: 1rem;
 }
 
 .containers {
@@ -93,7 +93,6 @@ tfoot td {
   align-items: flex-start;
   gap: 5px;
   width: 50%;
-  padding-top: 1rem;
 }
 
 .summary > div {
@@ -112,10 +111,10 @@ tfoot td {
   width: 120px;
 }
 
-#total-due {
-  width: 500px;
-}
-
 .summary select {
   width: 120px;
+}
+
+#total-due {
+  width: 500px;
 }
